Alignment issues in Followers and Following in UI and css. Added userId in data

--- a/client/src/components/css/Follow.css
+++ b/client/src/components/css/Follow.css
@@ -42,10 +42,14 @@ div.row{
   font-size: 26px;
   margin-top: -34px;
  }
+
+ div.row{
+  margin: 0;
+  padding-bottom: 10px;
+}
 .scrolluser {
   overflow-y: auto;
   max-height: 310px;
-
 }
  .avatar-div{
   margin-left: 0;
@@ -92,8 +96,14 @@ span.name{
  padding-left: 10px;
 }
 
-div.container.scrolluser{
+div.scrolluser{
   padding-top:5px;
+}
+
+button{
+  line-height: 2px;
+  float: right;
+  height: 30px;
 }
 .col-md-6{
   margin-top: 5px!important;
